-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.1
-
None
-
-
cb702100b (dev), 5d5fb1b19 (6.7)
Int properties (sizes) can no longer be changed in the property editor.
Reported at https://forum.qt.io/topic/156967/is-there-a-bug-in-qtdesigner-6-7-1-for-modify-widget-value/2 .
- is duplicated by
-
PYSIDE-2778 QT designer Layout margins are not editable
-
- Closed
-
-
QTCREATORBUG-31063 Unable to mutate integer property fields of any widgets
-
- Closed
-
- resulted from
-
QTBUG-121823 Qt Designer: Support Qt 6.7 icon themes
-
- Closed
-