Qt Designer: Fix editing int values in the property editor

Change c3aa524ec33d329b275680d9dd36b283b35a4154 completely overwrote
the existing handling of int properties in QtVariantEditorFactory
QtVariantPropertyManager. Make sure it is only used for the icon theme
enum.

Pick-to: 6.7
Fixes: QTBUG-125983
Change-Id: I8af2ddbe0b0a52e2edb78e979596049f31ae61fd
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>